modified the listUsers method